<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/cameraFragment">

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.surendramaran.yolov8tflite.ui.camera.CameraFragment"
        android:label="@string/camera" />

    <fragment
        android:id="@+id/freshnessFragment"
        android:name="com.surendramaran.yolov8tflite.ui.FreshnessFragment"
        android:label="@string/check_freshness" />

    <fragment
        android:id="@+id/volumeFragment"
        android:name="com.surendramaran.yolov8tflite.ui.volume.VolumeFragment"
        android:label="@string/volume" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.surendramaran.yolov8tflite.ui.AnalyticsFragment"
        android:label="@string/analytics"
        tools:layout="@layout/fragment_analytics">
        <action
            android:id="@+id/action_analytics_to_detail"
            app:destination="@id/historyDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.surendramaran.yolov8tflite.ui.MoreFragment"
        android:label="@string/more" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.surendramaran.yolov8tflite.ui.chat.ChatFragment"
        android:label="@string/ai_chat" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.surendramaran.yolov8tflite.ui.MapFragment"
        android:label="@string/map" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.surendramaran.yolov8tflite.ui.history.HistoryFragment"
        android:label="@string/history">
        <action
            android:id="@+id/action_history_to_detail"
            app:destination="@id/historyDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/historyDetailFragment"
        android:name="com.surendramaran.yolov8tflite.ui.history.HistoryDetailFragment"
        android:label="@string/detection_detail">
        <argument android:name="imagePath" app:argType="string" />
        <argument android:name="timestamp" app:argType="long" />
        <argument android:name="fishCount" app:argType="string" />
        <argument android:name="details" app:argType="string" />
        <argument android:name="lat" app:argType="float" android:defaultValue="0.0" />
        <argument android:name="lng" app:argType="float" android:defaultValue="0.0" />

        <argument
            android:name="placeName"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.surendramaran.yolov8tflite.ui.onboarding.LanguageFragment"
        android:label="@string/select_language"
        tools:layout="@layout/fragment_language">
        <action
            android:id="@+id/action_language_to_profile"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.surendramaran.yolov8tflite.ui.profile.ProfileFragment"
        android:label="@string/profile">
        <argument
            android:name="isOnboarding"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

</navigation>